[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://assets/fith/fail.gd" id="1"]
[ext_resource type="AudioStream" uid="uid://btdw0wu025lux" path="res://assets/music/Weepin__Lucifer.mp3" id="2"]

[sub_resource type="LabelSettings" id="1"]
font_size = 30
font_color = Color(1, 0, 0, 1)
script = null

[node name="CanvasLayer" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.0
offset_top = -182.0
offset_right = 104.0
offset_bottom = -140.0
grow_horizontal = 2
grow_vertical = 2
text = "Ты умер("
label_settings = SubResource("1")
horizontal_alignment = 1

[node name="Button" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -42.0
offset_top = 270.0
offset_right = 58.0
offset_bottom = 301.0
grow_horizontal = 2
text = " Continue"

[node name="Button2" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -42.0
offset_top = -301.0
offset_right = 58.0
offset_bottom = -270.0
grow_horizontal = 2
grow_vertical = 0
text = "Quit"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer" parent="Control"]
process_mode = 3
stream = ExtResource("2")

[connection signal="pressed" from="Control/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Control/Button2" to="." method="_on_button_2_pressed"]
[connection signal="finished" from="Control/AudioStreamPlayer2D" to="." method="_on_audio_stream_player_2d_finished"]
